# coding-agent

./: .env.example  CHANGELOG.md  README.md  justfile  pyproject.toml
agent/: cli.py  core.py  tools.py
src/coding_agent/: cli.py  core.py  tools.py
