[project]
name = "coding-agent"
version = "1.0.0"
description = "A coding agent."
readme = "README.md"
authors = [{name = "Flurin Coretti", email = "hello@flurincoretti.com" }]
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.55.0",
    "click>=8.2.1",
    "environs>=14.2.0",
    "pathspec>=0.12.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "ty>=0.0.1a14",
]

[project.scripts]
agent = "coding_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
